Update and rename newcode to index.html

--- a/script/index.html
+++ b/script/index.html
@@ -10,7 +10,7 @@
           <img src="images/springsource.png">
         </td>
         <td>
-          <h1>Sample "HARIPRASAD" Application</h1>
+          <h1>Sample "HARIPRASAD-codedeploy" Application</h1>
         </td>
       </tr>
     </table>
