--- a/script/index.html
+++ b/script/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Sample "HelloKhushimisra1234" Application</title>
+    <title>Sample "Hariprasad" Application</title>
   </head>
   <body bgcolor=white>
 
