--- a/script/index.html
+++ b/script/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Sample "Hariprasad" Application</title>
+    <title>Sample "Praveen" Application</title>
   </head>
   <body bgcolor=white>
 
@@ -10,7 +10,7 @@
           <img src="images/springsource.png">
         </td>
         <td>
-          <h1>Sample "HARIPRASAD-codedeploy" Application</h1>
+          <h1>Sample "Praveen-codedeploy" Application</h1>
         </td>
       </tr>
     </table>
